--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -142,6 +142,17 @@ SMTP_PASS="your-app-password"
 WEBHOOK_AUDIT_ALERTS="https://hooks.slack.com/services/YOUR/SLACK/WEBHOOK"
 WEBHOOK_SYNC_ALERTS="https://hooks.slack.com/services/YOUR/SLACK/WEBHOOK"
 
+# Firebase Configuration
+FIREBASE_API_KEY="your-firebase-api-key"
+FIREBASE_AUTH_DOMAIN="your-project.firebaseapp.com"
+FIREBASE_PROJECT_ID="your-project-id"
+FIREBASE_STORAGE_BUCKET="your-project.appspot.com"
+FIREBASE_MESSAGING_SENDER_ID="123456789"
+FIREBASE_APP_ID="1:123456789:web:abcdef123456"
+FIREBASE_MEASUREMENT_ID="G-XXXXXXXXXX"
+# Firebase Service Account Key (JSON string for server-side operations)
+FIREBASE_SERVICE_ACCOUNT_KEY='{"type":"service_account","project_id":"your-project",...}'
+
 # =============================================================================
 # DEVELOPMENT & TESTING
 # =============================================================================
