--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -51,13 +51,17 @@
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dotenv": "^17.2.1",
     "express": "^4.18.3",
     "express-rate-limit": "^7.5.1",
+    "firebase": "^10.14.1",
+    "firebase-admin": "^12.7.0",
     "helmet": "^7.2.0",
     "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
     "mongodb": "^6.5.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.2",
     "pg": "^8.11.3",
     "prisma": "^6.13.0",
@@ -71,30 +75,22 @@
     "zod": "^4.0.14"
   },
   "devDependencies": {
-    "@types/amqplib": "^0.10.7",
-    "@types/bcryptjs": "^3.0.0",
-    "@types/compression": "^1.8.1",
-    "@types/cors": "^2.8.19",
+    "@types/amqplib": "^0.10.4",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/express-rate-limit": "^6.0.2",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^1.4.13",
     "@types/node": "^20.11.24",
     "@types/pg": "^8.15.5",
-    "@types/socket.io": "^3.0.2",
-    "@types/supertest": "^6.0.2",
-    "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^7.1.0",
-    "@typescript-eslint/parser": "^7.1.0",
-    "dotenv": "^16.6.1",
-    "eslint": "^8.57.0",
+    "@types/uuid": "^9.0.7",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.10",
-    "supertest": "^6.3.4",
-    "testcontainers": "^10.7.2",
-    "ts-jest": "^29.1.2",
-    "ts-node-dev": "^2.0.0",
-    "tsx": "^4.20.3",
+    "nodemon": "^3.0.2",
+    "prisma": "^5.0.0",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.3.3"
   }
 }
