--- a/nova-works/vercel.json
+++ b/nova-works/vercel.json
@@ -1,10 +1,10 @@
 {
   "version": 2,
   "framework": "vite",
-  "buildCommand": "npm run build:client",
+  "buildCommand": "vite build",
   "devCommand": "npm run dev",
   "installCommand": "npm install",
-  "outputDirectory": "dist/spa",
+  "outputDirectory": "dist",
   "env": {
     "NODE_ENV": "production"
   },
